# thevault-research

./: .gitignore  README.md  components.json  package.json  pnpm-lock.yaml
services/core/: README.md  pyproject.toml
services/core/tests/: conftest.py  test_core_flow.py
services/core/vault_core/: app.py  config.py  deps.py  main.py  todos.py
services/core/vault_core/ai/: generation.py  readiness.py  routing.py  setup.py  setup_runner.py
services/core/vault_core/ai/embeddings/: base.py  index.py  llama_cpp_embeddings.py  mock.py  sentence_transformer.py
services/core/vault_core/ai/grammars/: vault_claim_extraction.gbnf  vault_object_extraction.gbnf
services/core/vault_core/ai/models/: approval_overlay.py  downloader.py  (+21 more)
services/core/vault_core/api/: schemas.py
services/core/vault_core/capsules/: __init__.py  service.py
services/core/vault_core/db/: schema.py  session.py
services/core/vault_core/domain/: chunking.py  extraction.py
services/core/vault_core/scripts/: apply_ai_registry_evidence.py  apply_whisper_runtime_package_url.py  check_ai_readiness.py  export_ai_approval_template.py  export_openapi.py  generate_ai_candidate_model_registry.py  generate_ai_candidate_runtime_registry.py  hydrate_ai_registry_metadata.py  merge_ai_registry_evidence.py  pin_ai_registries.py  plan_ai_candidate_shortlist.py  plan_ai_registry_release.py  prepare_ai_registry_release_candidate.py  probe_ai_registry_artifacts.py  run_ai_setup.py  test_local_ai.py  test_voice_local.py  validate_ai_registries.py  verify_ai_registry_artifacts.py  verify_whisper_runtime_package.py
(+133 files in other folders)
