[project]
name = "vault-core"
version = "0.1.0"
description = "FastAPI local core for The Vault Research Lab."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.12",
  "uvicorn[standard]>=0.34.2",
  "pydantic>=2.11.5",
  "python-multipart>=0.0.20",
  "pypdf>=5.6.0"
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.11.12"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

